--- a/Bs.Main/Modules/VoucherModule/Views/VoucherDetailView.xaml
+++ b/Bs.Main/Modules/VoucherModule/Views/VoucherDetailView.xaml
@@ -7,6 +7,7 @@
              xmlns:viewmodels="clr-namespace:Bs.Main.Modules.VoucherModule.ViewModels" 
              d:DataContext="{d:DesignInstance Type=viewmodels:VoucherDetailVm}"
              mc:Ignorable="d" 
+             x:Name="main"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="ComboBox">
@@ -80,7 +81,7 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <Button Content="Add" HorizontalAlignment="Right"/>
+            <Button Content="Add" HorizontalAlignment="Right" Command="{Binding JournalDetail}"/>
 
             <DataGrid Grid.Row="1" Height="125" ItemsSource="{Binding Voucher.JournalEntries}">
                 <DataGrid.Columns>
@@ -90,14 +91,14 @@
                     <DataGridTemplateColumn >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Margin="3,1" Content="Detail"/>
+                                <Button Margin="3,1" Content="Detail" Command="{Binding DataContext.JournalDetail,ElementName=main}" CommandParameter="{Binding }"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                     <DataGridTemplateColumn >
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Margin="3,1" Content="Delete"/>
+                                <Button Margin="3,1" Content="Delete" Command="{Binding DataContext.JournalDetail,ElementName=main}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
