--- a/Bs.Main/App.xaml
+++ b/Bs.Main/App.xaml
@@ -2,18 +2,72 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Bs.Main"              
+             xmlns:ui="http://schemas.modernwpf.com/2019"
              xmlns:voucherVms="clr-namespace:Bs.Main.Modules.VoucherModule.ViewModels"
-             xmlns:voucherViews="clr-namespace:Bs.Main.Modules.VoucherModule.Views"
+             xmlns:voucherViews="clr-namespace:Bs.Main.Modules.VoucherModule.Views"             
+             xmlns:masterlistVms="clr-namespace:Bs.Main.Modules.MasterlistModule.ViewModels"
+             xmlns:masterlistViews="clr-namespace:Bs.Main.Modules.MasterlistModule.Views"             
              >
     <Application.Resources>
-
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
+            </ResourceDictionary.MergedDictionaries>
+
+
             <DataTemplate DataType="{x:Type voucherVms:VoucherListingVm}">
                 <voucherViews:VoucherListingView/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type voucherVms:VoucherDetailVm}">
                 <voucherViews:VoucherDetailView/>
             </DataTemplate>
+
+
+            <DataTemplate DataType="{x:Type masterlistVms:CompanyListingVm}">
+                <masterlistViews:CompanyListingView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type masterlistVms:CompanyAccountListingVm}">
+                <masterlistViews:CompanyAccountListingView/>
+            </DataTemplate>
+
+
+
+
+
+            <Style TargetType="TextBlock">
+                <Setter Property="Margin" Value="8"/>
+                <Setter Property="HorizontalAlignment" Value="Right"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+            <Style TargetType="ComboBox">
+                <Setter Property="Width" Value="100"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Width" Value="100"/>
+                <Setter Property="Margin" Value="3"/>
+                <Setter Property="Padding" Value="3"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+            <Style x:Key="LongText" TargetType="TextBox">
+                <Setter Property="Width" Value="auto"/>
+                <Setter Property="Margin" Value="3"/>
+                <Setter Property="Padding" Value="3"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+
+
+            <Style TargetType="Button">
+                <Setter Property="Margin" Value="3"/>
+                <Setter Property="Padding" Value="16 0"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
