--- a/Bs.Main/App.xaml
+++ b/Bs.Main/App.xaml
@@ -7,12 +7,16 @@
              xmlns:voucherViews="clr-namespace:Bs.Main.Modules.VoucherModule.Views"             
              xmlns:masterlistVms="clr-namespace:Bs.Main.Modules.MasterlistModule.ViewModels"
              xmlns:masterlistViews="clr-namespace:Bs.Main.Modules.MasterlistModule.Views"             
+             xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
              >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemeResources />
                 <ui:XamlControlsResources />
+                
+                <ResourceDictionary Source="/Bs.Main;component/Assets/Buttons.xaml" />
+
             </ResourceDictionary.MergedDictionaries>
 
 
@@ -30,6 +34,15 @@
             <DataTemplate DataType="{x:Type masterlistVms:CompanyAccountListingVm}">
                 <masterlistViews:CompanyAccountListingView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type masterlistVms:PayeeListingVm}">
+                <masterlistViews:PayeeListingView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type masterlistVms:PayeeAccountListingVm}">
+                <masterlistViews:PayeeAccountListingView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type masterlistVms:JournalAccountListingVm}">
+                <masterlistViews:JournalAccountListingView/>
+            </DataTemplate>
 
 
 
@@ -41,8 +54,11 @@
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <Style TargetType="ComboBox">
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="Height" Value="35"/>
                 <Setter Property="Width" Value="100"/>
-                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="HorizontalAlignment" Value="Left"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <Style TargetType="TextBox">
@@ -62,6 +78,30 @@
 
 
             <Style TargetType="Button">
+                <Setter Property="Margin" Value="3"/>
+                <Setter Property="Padding" Value="16 0"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+
+            <Style x:Key="Add" TargetType="Button">
+                <Setter Property="Content">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Grid>
+                                <Border CornerRadius="3"
+                                        BorderThickness="2"
+                                        BorderBrush="Green">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/images/Delete.png"/>
+                                        <ContentPresenter Content="{TemplateBinding Button.Content}" />
+                                    </StackPanel>
+                                </Border>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+
+                <Setter Property="Background" Value="Transparent"/>
                 <Setter Property="Margin" Value="3"/>
                 <Setter Property="Padding" Value="16 0"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
