--- a/Bs.Main/Modules/VoucherModule/Views/VoucherListingView.xaml
+++ b/Bs.Main/Modules/VoucherModule/Views/VoucherListingView.xaml
@@ -3,9 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Bs.Main.Modules.VoucherModule.Views" xmlns:viewmodels="clr-namespace:Bs.Main.Modules.VoucherModule.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:VoucherListingVm}"
+             xmlns:local="clr-namespace:Bs.Main.Modules.VoucherModule.Views" 
+             xmlns:viewmodels="clr-namespace:Bs.Main.Modules.VoucherModule.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:VoucherListingVm}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             x:Name="main">
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -21,23 +25,28 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Add" Command="{Binding Detail}"/>
+        <!--<Button Grid.Row="0" Grid.Column="0" Content="Add" Command="{Binding Detail}"/>-->
+        
         <DataGrid Grid.Row="1" ItemsSource="{Binding Vouchers}" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Journal Account" Binding="{Binding VoucherNumber}"/>
-                <DataGridTextColumn Header="Amount" Binding="{Binding PayeeAccountId}"/>
-                <DataGridTextColumn Header="W.Tax" Binding="{Binding CompanyAccountCode}"/>
-                <DataGridTemplateColumn >
+                <DataGridTextColumn Header="Voucher Number" Binding="{Binding VoucherNumber}"/>
+                <DataGridTextColumn Header="Code" Binding="{Binding CompanyAccountCode}"/>
+                <DataGridTextColumn Header="Payee" Binding="{Binding PayeeAccountId}"/>
+                <DataGridTemplateColumn Header="Status">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Margin="3,1" Content="Detail" Command="{Binding Detail}" CommandParameter="{Binding }"/>
+                            <ComboBox SelectedValue="{Binding Status}" ItemsSource="{Binding DataContext.VoucherStatusOption, ElementName=main}"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn >
+                <DataGridTemplateColumn Header="Actions">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Margin="3,1" Content="Delete"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Button Style="{StaticResource Delete}"/>
+                                <Button Style="{StaticResource Edit}" />
+                                <Button Style="{StaticResource Print}"/>
+                            </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
