--- a/Bs.Main/Modules/VoucherModule/Views/JournalDetailView.xaml
+++ b/Bs.Main/Modules/VoucherModule/Views/JournalDetailView.xaml
@@ -8,6 +8,7 @@
         d:DataContext="{d:DesignInstance Type=viewmodels:JournalEntryDetailVm}"
         mc:Ignorable="d"
         FontSize="14"
+        x:Name="main"
         Title="JournalDetailView" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -26,30 +27,12 @@
             <RowDefinition Height="auto"/>
             <RowDefinition/>
             <RowDefinition Height="auto"/>
-        </Grid.RowDefinitions>
-        <Grid.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="Margin" Value="8"/>
-                <Setter Property="HorizontalAlignment" Value="Right"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style>
-            <Style TargetType="ComboBox">
-                <Setter Property="Width" Value="150"/>
-                <Setter Property="Margin" Value="3"/>
-                <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style>
-            <Style TargetType="TextBox">
-                <Setter Property="Width" Value="100"/>
-                <Setter Property="Margin" Value="3"/>
-                <Setter Property="Padding" Value="3"/>
-                <Setter Property="HorizontalAlignment" Value="Left"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style>
-        </Grid.Resources>
+        </Grid.RowDefinitions> 
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Journal Account:"/>
-        <ComboBox Grid.Row="1" Grid.Column="1" SelectedValue="{Binding JournalEntry.JournalAccountName}"/>
+        <ComboBox Grid.Row="1" Grid.Column="1"
+                  SelectedValue="{Binding JournalEntry.JournalAccountName}" 
+                  ItemsSource="{Binding JournalAccounts}"/>
         
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Amount:"/>
         <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding JournalEntry.Amount}"/>
@@ -63,8 +46,18 @@
         <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding JournalEntry.TaxAmount}"/>
 
         <TextBlock Grid.Row="5" Grid.Column="0" Text="Particulars:"/>
-        <DataGrid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="5" 
+        <Button Grid.Row="5" Grid.Column="1" Content="Add" Style="{StaticResource Add}" Command="{Binding AddParticularItem}"/>
+        <DataGrid Grid.Row="6" Height="500" Grid.Column="0" Grid.ColumnSpan="5" 
                   ItemsSource="{Binding JournalEntry.Particulars}">
+            <DataGrid.Columns>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Style="{StaticResource Delete}" Command="{Binding DataContext.RemoveParticularItem,ElementName=main}" CommandParameter="{Binding }"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
         </DataGrid>
 
 
