--- a/Bs.Main/Modules/VoucherModule/Views/VoucherListingView.xaml
+++ b/Bs.Main/Modules/VoucherModule/Views/VoucherListingView.xaml
@@ -9,7 +9,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              x:Name="main">
-
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
@@ -25,13 +24,22 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <!--<Button Grid.Row="0" Grid.Column="0" Content="Add" Command="{Binding Detail}"/>-->
+        <Button Style="{StaticResource Reload}" Command="{Binding ReloadListing}"/>
         
-        <DataGrid Grid.Row="1" ItemsSource="{Binding Vouchers}" AutoGenerateColumns="False">
+        <Button Style="{StaticResource Add}" Content="Add" HorizontalAlignment="Right" Command="{Binding Detail}"/>
+        
+        <DataGrid Grid.Row="1" ItemsSource="{Binding Vouchers}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Voucher Number" Binding="{Binding VoucherNumber}"/>
-                <DataGridTextColumn Header="Code" Binding="{Binding CompanyAccountCode}"/>
-                <DataGridTextColumn Header="Payee" Binding="{Binding PayeeAccountId}"/>
+                <DataGridTemplateColumn Header="Actions">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <!--<Button Style="{StaticResource Edit}" Command="{Binding Edit}"  CommandParameter="{Binding }"/>-->
+                                <Button Style="{StaticResource Print}" Command="{Binding DataContext.Print, ElementName=main}" CommandParameter="{Binding }"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Status">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -39,17 +47,10 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Actions">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Style="{StaticResource Delete}"/>
-                                <Button Style="{StaticResource Edit}" />
-                                <Button Style="{StaticResource Print}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Voucher Number" Binding="{Binding VoucherNumber}"/>
+                <DataGridTextColumn Header="Company" Binding="{Binding CompanyId}"/>
+                <DataGridTextColumn Header="Code" Binding="{Binding CompanyAccountCode}"/>
+                <DataGridTextColumn Header="Payee" Binding="{Binding Payee.PayeeName}"/>
             </DataGrid.Columns>
         </DataGrid>
 
