--- a/Bs.Vouchers.FrontEnd/App.xaml
+++ b/Bs.Vouchers.FrontEnd/App.xaml
@@ -11,9 +11,11 @@
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemeResources />
                 <ui:XamlControlsResources />
-                
+
                 <ResourceDictionary Source="/Bs.Main;component/Assets/Buttons.xaml" />
-                
+                <ResourceDictionary Source="/Bs.Main;component/Assets/ListBoxes.xaml" />
+                <ResourceDictionary Source="/Bs.Main;component/Assets/TextBlocks.xaml" />
+
             </ResourceDictionary.MergedDictionaries>
 
             
@@ -47,7 +49,6 @@
                 <Setter Property="Margin" Value="3"/>
                 <Setter Property="Padding" Value="3"/>
                 <Setter Property="HorizontalAlignment" Value="Left"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <Style x:Key="LongText" TargetType="TextBox">
                 <Setter Property="Width" Value="auto"/>
