--- a/Bs.Vouchers.FrontEnd/Views/MainWindow.xaml
+++ b/Bs.Vouchers.FrontEnd/Views/MainWindow.xaml
@@ -12,102 +12,106 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
-        <Expander x:Name="SideBar" MouseDoubleClick="SideBar_MouseDoubleClick" Padding="12" Background="AliceBlue" IsExpanded="True">
-            <Grid Grid.Row="0">
-                <Grid.Resources>
-                    <Style TargetType="Button">
-                        <Setter Property="Background" Value="Transparent"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="Padding" Value="24,8" />
-                    </Style>
-                </Grid.Resources>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="150"/>
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-                <Button VerticalAlignment="Center" HorizontalAlignment="Center">Bookkeeping System</Button>
+        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Command="{Binding VoucherListing}">
+            <Button.Content>
+                <TextBlock Style="{StaticResource Header1}" Text="Voucher Entry"/>
+            </Button.Content>
+        </Button>
 
-                <ListBox Grid.Row="1" 
-                         ItemsSource="{Binding Companies}" 
+        <Border Grid.Row="1" BorderBrush="#FF786F6F" BorderThickness="0.7" Margin="5,0,5,5">
+        <Grid Width="300" Margin="8">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition MinHeight="100" Height="auto"/>
+                <RowDefinition MinHeight="100" Height="auto"/>
+                <RowDefinition />
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+
+            <Button Grid.Row="0" Margin="8"
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Top" 
+                    Style="{StaticResource Reload}" 
+                    Command="{Binding ReloadFilters}" />
+            
+            
+            <StackPanel Grid.Row="1">
+                <TextBlock Text="Company" Style="{StaticResource Header2}" HorizontalAlignment="Left"/>
+                <ListBox ItemsSource="{Binding Companies}" 
                          SelectedItem="{Binding SelectedCompany}"
-                         Background="Transparent" 
-                         Margin="0 0 0 0"
-                         Width="400">
+                         ItemContainerStyle="{StaticResource DefaultListBox}"
+                         Background="Transparent">
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel IsItemsHost="True"/>
                         </ItemsPanelTemplate>
                     </ListBox.ItemsPanel>
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="Height" Value="35" />
-                            <Setter Property="Margin" Value="6" />
-                        </Style>
-                    </ListBox.ItemContainerStyle>
+
                 </ListBox>
-                <ListBox Grid.Row="2" 
-                         ItemsSource="{Binding CompanyAccounts}" 
+            </StackPanel>
+            <StackPanel Grid.Row="2" >
+                <TextBlock Text="Company Account" Style="{StaticResource Header2}" HorizontalAlignment="Left"/>
+                <ListBox ItemsSource="{Binding CompanyAccounts}" 
+                         SelectedItem="{Binding SelectedCompanyAccount}"
                          Background="Transparent" 
-                         Margin="0 0 0 0" 
-                         Width="400">
+                         ItemContainerStyle="{StaticResource DefaultListBox}" >
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel IsItemsHost="True"/>
                         </ItemsPanelTemplate>
                     </ListBox.ItemsPanel>
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="Height" Value="35" />
-                            <Setter Property="Margin" Value="6" />
-                        </Style>
-                    </ListBox.ItemContainerStyle>
                 </ListBox>
-                <Grid Grid.Row="3" >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                    <TextBox Padding="8" FontSize="14" Margin="6 3">
-                        <TextBox.Text>
-                            <MultiBinding StringFormat="{}{0} {1}">
-                                <Binding Path="SelectedCompany"/>
-                                <Binding Path="SelectedPayeeAccount.AccountNumber"/>
-                            </MultiBinding>
-                        </TextBox.Text>
-                    </TextBox>
-                    <DataGrid Grid.Row="1" 
-                          ItemsSource="{Binding PayeeAccounts}"
-                          SelectedItem="{Binding SelectedPayeeAccount}"
-                          AutoGenerateColumns="False" 
-                          IsReadOnly="True" 
-                          SelectionUnit="FullRow"
-                          SelectionMode="Single">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="Account Number" Binding="{Binding AccountNumber}"/>
-                            <DataGridTextColumn Header="Payee Name" Binding="{Binding Payee.PayeeName}"/>
-                            <DataGridTextColumn Header="Owner Name" Binding="{Binding Payee.OwnerName}"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </Grid>
-                <!--<TreeView Grid.Row="3">
-                <TreeViewItem>
-                    <TreeViewItem.Header>
-                        <Button Content="Vouchers" Command="{Binding VoucherListing}"/>
-                    </TreeViewItem.Header>
-                </TreeViewItem> 
-            </TreeView>-->
+            </StackPanel>
+            <Grid Grid.Row="3" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Payee Account" Grid.ColumnSpan="2" Style="{StaticResource Header2}"/>
+                <TextBlock Grid.Row="1" Text="Search:" Style="{StaticResource Default}"/>
+                <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource LongText}" />
+                <ListBox Grid.Row="2" Grid.ColumnSpan="2"
+                         ItemsSource="{Binding PayeeAccounts}"
+                         SelectedItem="{Binding SelectedPayeeAccount}"
+                         ItemContainerStyle="{StaticResource DefaultListBox}"
+                         Background="Transparent" 
+                         >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock HorizontalAlignment="Left">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat="{}{0} - {1}">
+                                        <Binding Path="AccountNumber"/>
+                                        <Binding Path="Payee.PayeeName"/>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </Grid>
-        </Expander>
+
+        </Grid>
+            
+        </Border>
 
 
         <Grid Grid.Row="2" Grid.Column="2">
-            <ContentControl Content="{Binding CurrentViewModel}"
-                            BorderBrush="#FF786F6F" BorderThickness="0.3" Margin="5,0,5,5"
+            <Border BorderBrush="#FF786F6F" BorderThickness="0.7" Margin="5,0,5,5">
+                <ContentControl Content="{Binding CurrentViewModel}"
+                            
             />
+            </Border>
         </Grid>
     </Grid>
 </Window>
