--- a/Bs.Vouchers.FrontEnd/Views/MainWindow.xaml
+++ b/Bs.Vouchers.FrontEnd/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bs.Vouchers.FrontEnd" xmlns:viewmodels="clr-namespace:Bs.Vouchers.FrontEnd.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainVm}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="900"
+        Title="MainWindow" Height="800" Width="1000" WindowState="Maximized"
         x:Name="main">
     <Grid>
         <Grid.ColumnDefinitions>
