--- a/Bs.Main/Modules/VoucherModule/Views/VoucherDetailView.xaml
+++ b/Bs.Main/Modules/VoucherModule/Views/VoucherDetailView.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="http://schemas.modernwpf.com/2019"
              xmlns:local="clr-namespace:Bs.Main.Modules.VoucherModule.Views" 
              xmlns:viewmodels="clr-namespace:Bs.Main.Modules.VoucherModule.ViewModels" 
              d:DataContext="{d:DesignInstance Type=viewmodels:VoucherDetailVm}"
@@ -14,26 +15,12 @@
             <Setter Property="MinWidth" Value="125"/>
             <Setter Property="Margin" Value="4"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="MinWidth" Value="75"/>
-            <Setter Property="Margin" Value="4"/>
-        </Style>
+        </Style> 
         <Style TargetType="TextBlock">
             <Setter Property="Margin" Value="6"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
-        </Style>
-        <Style x:Key="PreviewTb" TargetType="TextBlock">
-            <Setter Property="Margin" Value="6"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="FontSize" Value="10"/>
-            <Setter Property="FontStyle" Value="Italic"/>
-        </Style>
-        <Style TargetType="CheckBox">
-            <Setter Property="Margin" Value="6"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
+        </Style>  
         <Style TargetType="Button">
             <Setter Property="Margin" Value="6"/>
             <Setter Property="Padding" Value="12 6"/>
@@ -58,8 +45,8 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Text="Voucher Number:"/>
-        <TextBox Grid.Column="1" Grid.Row="0" IsReadOnly="True" Text="{Binding Voucher.VoucherNumber}"/>
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="Voucher Number:" />
+        <TextBox  Grid.Column="1" Grid.Row="0" IsReadOnly="True" Text="{Binding Voucher.VoucherNumber}"/>
 
         <TextBlock Grid.Column="2" Grid.Row="0" Text="Entry Date:"/>
         <DatePicker Grid.Column="3" Grid.Row="0" VerticalAlignment="Center"  SelectedDate="{Binding Voucher.EntryDate}"/>
