--- a/Bs.Vouchers.FrontEnd/Views/MainWindow.xaml
+++ b/Bs.Vouchers.FrontEnd/Views/MainWindow.xaml
@@ -3,8 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Bs.Vouchers.FrontEnd" xmlns:viewmodels="clr-namespace:Bs.Vouchers.FrontEnd.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainVm}"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
+        ui:WindowHelper.UseModernWindowStyle="True"
+        
+        xmlns:local="clr-namespace:Bs.Vouchers.FrontEnd" 
+        xmlns:viewmodels="clr-namespace:Bs.Vouchers.FrontEnd.ViewModels" 
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainVm}"
         mc:Ignorable="d"
+        
         Title="MainWindow" Height="800" Width="1000" WindowState="Maximized"
         x:Name="main">
     <Grid>
